2003-05-20  Loban A Rahman <loban@earthling.net>

	* stickynotes_applet.h: Fixed typo in header declaration.

2003-05-19  Loban A Rahman <loban@earthling.net>

	* stickynotes.glade: Re-added HIG fixes done by Dennis.
	* stickynotes_applet.c: Fixed typo in prefs.
	* stickynotes_applet.c: Applet menu properly reflects current state.
	* stickynotes.c: New notes now appear correctly.
	* stickynotes_callbacks.c: Lock/unlocking menu item added to notes.
	* stickynotes.glade, stickynotes.c: Added missing "confirm on note
	  deletion" gconf option. No UI as it is "advanced".
	* stickynotes_applet.c, stickynotes_applet_callbacks.c: Polished UI.

2003-05-19  Loban A Rahman <loban@earthling.net>

	* *.*:
	  - Major changes!
	  - Fixed bug #109427 : Induvidial note color, locking, new resize
	    locations, and extra pref for note closure prompt.
	  - Fixed bug #111007 : multiple instances of applet now possible.
	  - Fixed bug #111380 : uses system colors by default.
	  - Simplified colors. Notes no longer "highlight" when in focus. Each
	    note's locked state and color is also induvidually saved.
	  - Some regression in HIG of dialogs (done by Dennis Cranston).
	    Will fix.
	  - Some regression in features in prefs (done by Matt Keenan).
	    Will fix.

2003-05-17  Dennis Cranston <dennis_cranston at yahoo com>
	
	* stickynotes.glade:  More HIGification of this poor little 
	preferences dialog.  Also, HIGify the widget padding of action 
	areas.   

2003-05-15  Kevin Vandersloot <kfv101@psu.edu>

	* stickynotes-glade: fix non ascii copyright symbol. Fixes bug #112960

2003-04-28  Dennis Cranston <dennis_cranston at yahoo com>

	* stickynotes.glade:  HIGify the preferences and edit title 
	dialogs.

2003-04-22  Loban A Rahman <loban@earthling.net>

	* stickynotes.glade, stickynotes_callbacks.c: Window management
	  buttons are only visible when a note is in focus.

2003-04-16  Loban A Rahman <loban@earthling.net>
