@@ -1,6 +1,7 @@
 2003-05-20  Loban A Rahman <loban@earthling.net>
 
 	* stickynotes_applet.h: Fixed typo in header declaration.
+	* stickynotes_applet.c: Code cleanup and speedup.
 
 2003-05-19  Loban A Rahman <loban@earthling.net>
 
